United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7102191 G1: assert(_min_desired_young_length <= initial_region_num) failed: Initial young gen size too small
7102191 : G1: assert(_min_desired_young_length <= initial_region_num) failed: Initial young gen size too small

Details
Type:
Bug
Submit Date:
2011-10-18
Status:
Closed
Updated Date:
2012-01-23
Project Name:
JDK
Resolved Date:
2012-01-23
Component:
hotspot
OS:
linux
Sub-Component:
gc
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs23

Related Reports
Backport:
Backport:

Sub Tasks

Description
One of the tests crashed with
#  Internal Error (/tmp/jprt/P1/200135.jcoomes/source/src/share/vm/gc_implementation/g1/g1CollectorPolicy.cpp:521), pid=30646, tid=140279212095232
#  assert(_min_desired_young_length <= initial_region_num) failed: Initial young gen size too small

                                    

Comments
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-emb/hotspot/rev/dbfcbecbb2dc
                                     
2011-11-10
EVALUATION

See main CR
                                     
2011-11-04
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-gc/hotspot/rev/dbfcbecbb2dc
                                     
2011-10-26
EVALUATION

If we run with NewRatio set we set min and max new size to the same value. The temporary initial value is not updated and should not be checked by the assert in this case.
                                     
2011-10-24



Hardware and Software, Engineered to Work Together