7102191: G1: assert(_min_desired_young_length <= initial_region_num) failed: Initial young gen size too small

Initial_region_num actually not needed.

Reviewed-by: tonyp, johnc